# flip

./: .gitignore  CMakeLists.txt  build.sh  buildit  config.cfg  configure  multirun  multirun.py  run  sc.py  spherocylidner.ipynb  spherocylinder_l_2.vtk  spherocylinder_l_5.vtk  test
src/: CMakeLists.txt  accumalators.f90  config.f90  globals.f90  main.f90  moves.f90  overlap.f90  particle.f90  potential.f90  utils.f90
tests/: test_config.cfg  test_random.pf  test_simple.pf
